Design Changes + CreateAccounts

--- a/TalentForge.UI/TalentForge.UI/TalentForge.UI.csproj
+++ b/TalentForge.UI/TalentForge.UI/TalentForge.UI.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\IMG-20230819-WA0002-removebg-preview.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
